fix(css): text-align updated

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,7 +124,6 @@ a:hover {
 
 p {
 	margin-bottom: 1em;
-	text-align: justify;
 }
 
 .prose p {
